@@ -51,6 +51,10 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #1661: make 'python-check-interval' setting in zope.conf
+        actually work as documented.  This setting allows for important
+        tuning opportunities for production Zope servers.
+
       - Collector #1657:  Don't break host-based virtual hosting when
         purging an HTTP accelerator.
 
